# AI-Presentation-Generator

./: README.md  local_run.md  prove_dynamic_decision.py  pyproject.toml  run_a2a.sh
agent_cards/: builder_agent.json  copywriter_agent.json  image_generator_agent.json  orchestrator_agent.json  outliner_agent.json
output/: presentation.pptx
src/ai_ppt/agents/: builder.py  copywriter.py  image_generator.py  orchestrator.py  outliner.py
src/ai_ppt/common/: base_agent.py  server_utils.py  types.py  utils.py
src/ai_ppt/mcp/: a2a_client.py  a2a_mcp_server.py  client.py  server.py
